docs: 全库论文级教材升级与内容工程
- 补回被回退的 17 篇编程语言文档 12 段式论文级正文（Markdown/CSS/HTML/Vue/Java/Kotlin/Go/C/C++/Python/SQL）
- 批量扩充 1293 篇非 AI 文档为 12 段式教学结构（学习目标/历史/定义/推导/代码注释/对比/陷阱/实践/案例/总结/参考/延伸）
- mobile 内容并入 full 并提升 266 篇新文档（D02316-D02581），ID 注册表归属修复
- 新增 6 个非 AI 知识模块：Rust、Shell、Astro、Vite、pnpm 与 Monorepo、Tailwind CSS（M053-M058，D02582-D02587）
- 全部大型 ASCII 图表替换为 Mermaid（保留文件夹/项目架构 ASCII）
- 删除文档末尾更新记录段（137 段），习题段全部转换为知识讲解（885 处）
- 全库 emoji 清理（583 处符号替换为纯文本），示例图片占位符修复
- 联网核实官方文档与 Bilibili 学习资源（黑马程序员/尚硅谷）
- 构建修复：Astro glob loader 启用 deferRender 解决超大内容集 data store 序列化超限
- 全量校验通过：YAML 0 错误、emoji 0、习题/更新段 0、非 AI ASCII 残留 0
- pnpm --filter @fandex/web build 通过：2338 页